Add JVM args for tests to silence a warning about accessing sun.misc.Unsafe::objectFieldOffset